DMP-4813 Change update metadata from OffsetDateTime to String so date is in expected format
Changed the update metadata request from OffsetDateTime to a formatted string so the output is in the expected format